{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 54,
  "lineage": "a3e2ef65-b23c-e95f-bf34-259df8046617",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/networkInterfaces/demo-nic",
            "internal_domain_name_suffix": "cppkhog4u0iezh15ssebowskmb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/publicIPAddresses/test-publicip",
                "subnet_id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet"
              }
            ],
            "location": "westeurope",
            "name": "demo-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "demo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.testrg",
            "azurerm_subnet.test-subnet",
            "azurerm_virtual_network.test-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/networkSecurityGroups/demo-group",
            "location": "westeurope",
            "name": "demo-group",
            "resource_group_name": "demo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "demo-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/networkSecurityGroups/demo-group/securityRules/demo-rule",
            "name": "demo-rule",
            "network_security_group_name": "demo-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "demo-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-group",
            "azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/publicIPAddresses/test-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "test-publicip",
            "resource_group_name": "demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.testrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet",
            "name": "demo-subnet",
            "resource_group_name": "demo-rg",
            "virtual_network_name": "demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.testrg",
            "azurerm_virtual_network.test-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b8a3de13-a6de-4c90-9f7f-9488175a4a61",
            "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet",
            "location": "westeurope",
            "name": "demo-vnet",
            "resource_group_name": "demo-rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/d7ad4b02-9e4a-4d94-ac4c-296049510414/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet",
                "name": "demo-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.testrg"
          ]
        }
      ]
    }
  ]
}